new content added for Apropose

--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -39,7 +39,7 @@ $letterSpacing-2: 0.02em // for small font sizes
     line-height: 1.5
   @else if $rank == 4
     font-size: $fontSize-4
-    line-height: 1.5
+    line-height: 1.5*$baseline
   @else if $rank == 5
     font-size: $fontSize-5
     line-height: $baseline
