--- a/src/design/index.jade
+++ b/src/design/index.jade
@@ -14,7 +14,7 @@ block title
 
 block description
   p.subtext.
-    With a mixed background of Software Engineering, Human-Computer Interaction and Design Thinking, I aspire to design and build experiences that are useful, pleasant and meaningful.
+    I aspire to design and build experiences that are useful, pleasant and meaningful. To me, good design solutions come from deep empathy of the users, good understanding of the problem, constraints and business objectives, iterations closely with user feedback, and intentional decisions with solid reasoning.
 
 block category-content
   .category-content.clearfix
