--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -8,6 +8,11 @@
   h1
     text-align: center
 
+  // a smaller version of h2
+  h2
+    @include typeScale(3)
+    margin-bottom: 0.5 * $baseline
+
   h3
     text-align: center
     width: 100%
