--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -16,9 +16,15 @@ doctype html
 head
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-  title Ningxia
+  title Ningxia Zhang | Product Designer, Former CS Grad @ Stanford
   meta(name='description', content= 'A new Yeogurt application')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
+
+  link(rel="apple-touch-icon-precomposed", sizes="144x144", href= baseUrl + "images/favicon/apple-touch-icon-144x144.png")
+  link(rel="apple-touch-icon-precomposed", sizes="152x152", href= baseUrl + "images/favicon/apple-touch-icon-152x152.png")
+  link(rel="icon", type="image/png", href= baseUrl + "images/favicon/favicon-32x32.png", sizes="32x32")
+  link(rel="icon", type="image/png", href= baseUrl + "images/favicon/favicon-16x16.png", sizes="16x16")
+
   block stylesheets
     link(rel='stylesheet', href= baseUrl + 'styles/main.css')
     link(rel='stylesheet', type='text/css', href= '//fast.fonts.net/cssapi/67330240-65d1-4421-80e1-1ed4d5553a91.css')
