wording pass on category pages

--- a/src/art/index.jade
+++ b/src/art/index.jade
@@ -14,7 +14,7 @@ block title
 
 block description
   p.subtext.
-    Creating art has been part of my life since I was a child. I discontinued when I was a teenager, because everyone told me I was good at math and I should become a scientist or engineer. In recent years, I rediscovered my passion and started to explore the space of art once again, with some new skills learned.
+    Art has been a passion of mine since childhood, but I discontinued pursuing it because it was not considered worthwhile compared to an engineering degree. In recent years, I started to explore the space of art again. Instead of focusing on the craft of traditional art forms like I did before, I’m more interested in modern and contemporary art ideas and trying out different mediums.
 
 block category-content
   .category-content.clearfix
