--- a/src/code/index.jade
+++ b/src/code/index.jade
@@ -14,7 +14,7 @@ block title
 
 block description
   p.subtext.
-    One of my bachelor degrees and my master degree are in Computer Science. I'm not a machine learning expert or a Python ninja, but it thrills me to take on intellectual challenges and see things work.
+    Both my bachelor and master degrees are in Computer Science. It thrills me to take on intellectual challenges and make things work. Although I am more interested in design than in becoming a phenomenal coder, or a Machine Learning expert, the technical understanding and skills opened door to many possibilities of what I can do.
 
 block category-content
   .category-content.clearfix
