--- a/src/writing/index.jade
+++ b/src/writing/index.jade
@@ -14,7 +14,7 @@ block title
 
 block description
   p.subtext.
-    I was never a good writer at school. Writing Chinese essays used to be my most annoying headache. Now I rediscover writing as a way to clarify and sort out my thoughts and ideas.
+    Writing Chinese essays used to be my most annoying headache at school. Practicing English writing for studying abroad was even more of a burden. However, later I found it extremely powerful to sort out my floating thoughts. Having realized that it could be worthwhile to share them with more people, I started to put more conscious efforts into it and publish my writings on Medium.
 
 block category-content
   .category-content
