--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -29,6 +29,16 @@ head
     link(rel='stylesheet', href= baseUrl + 'styles/main.css')
     link(rel='stylesheet', type='text/css', href= '//fast.fonts.net/cssapi/67330240-65d1-4421-80e1-1ed4d5553a91.css')
 
+  script.
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-79140776-1', 'auto');
+    ga('send', 'pageview');
+
+
 body
   <!--[if lt IE 9]>
   <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
