placeholder music pages

--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -24,7 +24,7 @@ mixin menu(active, spec)
               li
                 a(href='/writing' class= active === 'writing'? 'is-active': '') Writing
               li
-                a(href='#' class= active === 'music'? 'is-active': '') Music
+                a(href='/music' class= active === 'music'? 'is-active': '') Music
 
       .row
         .large-12.columns
