back to category page optimization

--- a/src/_styles/global.sass
+++ b/src/_styles/global.sass
@@ -47,7 +47,7 @@ body
   @media #{$large-up}
     right: 2*$baseline
 
-.logo
+.logo, .back
   position: fixed
   top: $baseline
   left: 0.5*$baseline
