--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -18,10 +18,10 @@
 @import 'global'
 
 // Import Modules
-@import '../_modules/link/link'
 @import '../_modules/menu/menu'
 @import '../_modules/logo/logo'
 @import '../_modules/cover/cover'
+@import '../_modules/back/back'
 
 // Import Layouts
 @import '../_layouts/category'
