--- a/src/art/time-whispers/index.jade
+++ b/src/art/time-whispers/index.jade
@@ -1,5 +1,7 @@
 extends ../../_layouts/project
 
+include ../../_modules/back/back
+
 block config
   //- Correct base url pathing for this page
   - var baseUrl = '../../'
@@ -9,4 +11,5 @@ block project-content
     .row
       .large-10.medium-12.large-offset-1.columns
         include:markdown content.md
-        a(href='/art') ← Back to my art
+
+  +back({url: '/art'})(class='back')
