--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -16,8 +16,9 @@ doctype html
 head
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-  title Ningxia Zhang | Product Designer, Former CS Grad @ Stanford
-  meta(name='description', content= 'A new Yeogurt application')
+  title Ningxia Zhang
+  meta(name='description', content= 'Product Designer based in SF Bay Area, from China. Former Stanford CS Master in HCI.')
+  meta(name='author', content= 'Ningxia Zhang')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
   link(rel="apple-touch-icon-precomposed", sizes="144x144", href= baseUrl + "images/favicon/apple-touch-icon-144x144.png")
