--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -30,15 +30,15 @@ block content
           I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later, in middle school I gave up all my creative pursuits when I was found to be talented in math and science, and everyone told me that art was for people who weren’t smart enough to do math.
 
         p.
-          So I ended up as a Software Engineering major in one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
+          So I ended up as a Software Engineering major in #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
 
         p.
           This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for a newly-arrived international student, but the overall experience was transformative and empowering.
 
         p.
-          After graduation, I joined an early-stage startup founded by Stanford HCI researchers as the Director of User Experience. My time there was a tremendous learning experience, not only in design, but also in company culture, collaboration, hiring, marketing and how startup works.
+          After graduation, I joined an early-stage #[a(href='/design/apropose/', target='_blank') startup] founded by Stanford HCI researchers as the Director of User Experience. I was responsible of user research, interaction design, visual design, as well as corporate and product branding. I was also closely involved in business development and product strategy and acted as a half front-end developer. It was a tremendous learning experience, not only in hands-on skills of building products, but also in management, collaboration and in general how startup works.
 
-  .about-section
+  .about-section.about-section--bg
     .row.content--fadeIn
       .large-12.columns
         h2 I'm currently looking for full-time product design opportunities. Take my resume #[a(href='https://www.dropbox.com/s/una1rb4b7p1zela/Resume-Ningxia.pdf?dl=0', target='_blank', class='link--prominent') here].
@@ -60,6 +60,12 @@ block content
         a(href='https://www.linkedin.com/in/ningxiazhang', target='_blank') LinkedIn
         label Let's connect :)
 
+  .about-section
+    .row.content--fadeIn
+      .large-8.columns
+        h3 About the Site
+        p.
+          This site is designed and hand-coded by me, using a #[a(href='http://yeoman.io/', target='_blank') Yeoman] generator for static sites named #[a(href='https://github.com/larsonjj/generator-yeogurt', target='_blank') Yeogurt], with the power of #[a(href='http://jade-lang.com/', target='_blank') Jade], #[a(href='http://sass-lang.com/', target='_blank') Sass] and #[a(href='http://foundation.zurb.com/', target='_blank') Foundation]. The code can be found on #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') Github]. It's constantly being updated, see the #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') changelog].
 
   +logo('../')(class='logo')
   +menu('about')(class='menu')
