new build and link to changelog

--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -65,7 +65,7 @@ block content
       .large-8.columns
         h3 About the Site
         p.
-          This site is designed and hand-coded by me, using a #[a(href='http://yeoman.io/', target='_blank') Yeoman] generator for static sites named #[a(href='https://github.com/larsonjj/generator-yeogurt', target='_blank') Yeogurt], with the power of #[a(href='http://jade-lang.com/', target='_blank') Jade], #[a(href='http://sass-lang.com/', target='_blank') Sass] and #[a(href='http://foundation.zurb.com/', target='_blank') Foundation]. The code can be found on #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') Github]. It's constantly being updated, see the #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') changelog].
+          This site is designed and hand-coded by me, using a #[a(href='http://yeoman.io/', target='_blank') Yeoman] generator for static sites named #[a(href='https://github.com/larsonjj/generator-yeogurt', target='_blank') Yeogurt], with the power of #[a(href='http://jade-lang.com/', target='_blank') Jade], #[a(href='http://sass-lang.com/', target='_blank') Sass] and #[a(href='http://foundation.zurb.com/', target='_blank') Foundation]. The code can be found on #[a(href='https://github.com/ningxiaz/new-ningxia-site', target='_blank') Github]. It's constantly being updated, see the #[a(href='https://github.com/ningxiaz/new-ningxia-site/blob/master/CHANGELOG.md', target='_blank') changelog].
 
   +logo('../')(class='logo')
   +menu('about')(class='menu')
