project details added to Apropose

--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -13,7 +13,8 @@
     @include typeScale(3)
     margin-bottom: 0.5 * $baseline
 
-  h3
+  h4
+    @include typeScale(4)
     text-align: center
     width: 100%
     max-width: 24rem
