--- a/src/index.jade
+++ b/src/index.jade
@@ -21,6 +21,18 @@ block content
       label.landing-label Always
       h1.landing-tagline #[a(class='link--prominent landing-link--music', href='/music') Music] Lover
 
+  a(href='/about')
+    .landing-mobile-section.content--fadeIn(style='background-image: url(images/landing_bg.jpg)')
+      h3 → About
+
+  a(href='/design')
+    .landing-mobile-section.content--fadeIn(style='background-image: url(images/landing_design_bg.jpg)')
+      h3 → Design
+
+  a(href='/art')
+    .landing-mobile-section.content--fadeIn(style='background-image: url(images/landing_art_bg.jpg)')
+      h3 → Art
+
   +logo('/')(class='logo')
   +menu(class='menu')
 
