--- a/src/_styles/landing.sass
+++ b/src/_styles/landing.sass
@@ -106,3 +106,10 @@
   @media #{$medium-up}
     display: none
 
+.landing-footer
+  footer
+    margin-top: 0
+
+  @media #{$medium-up}
+    display: none
+
