--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -22,6 +22,7 @@
 @import '../_modules/logo/logo'
 @import '../_modules/cover/cover'
 @import '../_modules/back/back'
+@import '../_modules/footer/footer'
 
 // Import Layouts
 @import '../_layouts/category'
