--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -6,6 +6,9 @@
 // Foundation responsive
 @import 'foundation'
 
+// Fluidbox
+@import 'fluidbox.min'
+
 // Global variables and styles
 @import 'typography'
 @import 'colors'
