--- a/src/_styles/main.sass
+++ b/src/_styles/main.sass
@@ -7,7 +7,7 @@
 @import 'foundation'
 
 // Fluidbox
-@import 'fluidbox.min'
+@import 'node_modules/fluidbox/dist/css/fluidbox.min'
 
 // Global variables and styles
 @import 'typography'
