--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -18,7 +18,7 @@ block content
 
     .large-8.columns
       p.subtext.
-        I’m Ningxia Zhang, a product designer living in San Francisco Bay Area, from China. I create digital products that bring convenience, delight and meaning to people’s lives. With a mixed background of Computer Science, Human-Computer Interaction and Entrepreneurship, I bring a holistic perspective to design, and can take a product idea from concept to life.
+        I’m Ningxia Zhang (张宁夏), a product designer living in San Francisco, originally from China. With a mixed background of Computer Science, Human-Computer Interaction and Entrepreneurship, I bring a holistic perspective to design, and can take a product idea from concept to life. When I'm not designing, I spend my time painting, making conceptual art, strolling in galleries and museums, going to concerts and reading.
 
   +cover('../images/portrait.jpg')(class='about-portrait content--fadeIn')
 
@@ -30,18 +30,18 @@ block content
           I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later, in middle school I gave up all my creative pursuits when I was found to be talented in math and science, and everyone told me that art was for people who weren’t smart enough to do math.
 
         p.
-          So I ended up as a Software Engineering major in #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
+          So I ended up as a Software Engineering major in #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but felt something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
 
         p.
           This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for a newly-arrived international student, but the overall experience was transformative and empowering.
 
         p.
-          After graduation, I joined an early-stage #[a(href='/design/apropose/', target='_blank') startup] founded by Stanford HCI researchers as the Director of User Experience. I was responsible of user research, interaction design, visual design, as well as corporate and product branding. I was also closely involved in business development and product strategy and acted as a half front-end developer. It was a tremendous learning experience, not only in hands-on skills of building products, but also in management, collaboration and in general how startup works.
+          After graduation, I joined an early-stage #[a(href='/design/apropose/', target='_blank') startup] founded by Stanford HCI researchers as the Director of User Experience. I was responsible of user research, interaction design, visual design, as well as corporate and product branding, while being closely involved in product strategy, business development and front-end development. It was a tremendous learning experience.
 
   .about-section.about-section--bg
     .row.content--fadeIn
       .large-12.columns
-        h2 I'm currently looking for full-time product design opportunities. Take my resume #[a(href='https://www.dropbox.com/s/una1rb4b7p1zela/Resume-Ningxia.pdf?dl=0', target='_blank', class='link--prominent') here].
+        h2 I'm currently designing @ Facebook :)
 
     .row.content--fadeIn.about-contact
       .large-3.columns
@@ -50,7 +50,7 @@ block content
 
       .large-3.columns
         a(href='https://www.instagram.com/ningxiaz/', target='_blank') Instagram
-        label I'm no photographer, but you can learn more about what I'm like.
+        label The best way to see what I've been up to.
 
       .large-3.columns
         a(href='https://twitter.com/ningxiaz', target='_blank') Twitter
