update info and font source

--- a/src/_modules/menu/menu.jade
+++ b/src/_modules/menu/menu.jade
@@ -21,10 +21,10 @@ mixin menu(active, spec)
                 a(href='/art' class= active === 'art'? 'is-active': '') Art
               li
                 a(href='/code' class= active === 'code'? 'is-active': '') Code
-              li
-                a(href='/writing' class= active === 'writing'? 'is-active': '') Writing
-              li
-                a(href='/music' class= active === 'music'? 'is-active': '') Music
+              // li
+              //   a(href='/writing' class= active === 'writing'? 'is-active': '') Writing
+              // li
+              //   a(href='/music' class= active === 'music'? 'is-active': '') Music
 
       .row
         .large-12.columns
@@ -35,9 +35,8 @@ mixin menu(active, spec)
           .menu-contact
             label Connect With Me
             p
-              a(href='https://www.instagram.com/ningxiaz/', target='_blank') Instagram
+              a(href='https://www.instagram.com/ningxiazzzzzzzz/', target='_blank') Instagram
               a(href='https://twitter.com/ningxiaz', target='_blank') Twitter
               a(href='https://www.linkedin.com/in/ningxiazhang', target='_blank') LinkedIn
-              a(href='https://medium.com/@ningxiaz', target='_blank') Medium
 
 
