--- a/src/_modules/menu/menu.sass
+++ b/src/_modules/menu/menu.sass
@@ -80,8 +80,8 @@ $width--menuButton: 32px
       animation-delay: .6s
 
   nav
-    margin-top: 2*$baseline
-    margin-bottom: $baseline
+    margin-top: 4*$baseline
+    margin-bottom: 4*$baseline
 
   li
     display: block
