--- a/src/_styles/typography.sass
+++ b/src/_styles/typography.sass
@@ -1,7 +1,7 @@
 // Typography variables and rules
 
-$fontFamily-primary: 'Futura PT Multilingual W01'
-$fontFamily-accent: 'MTI Letter Gothic W01'
+$fontFamily-primary: 'futura-pt'
+$fontFamily-accent: 'letter-gothic-std'
 
 // baseline grid size
 $baseline: 1.5rem
@@ -18,9 +18,9 @@ $fontSize-6: 1rem // 16px
 $fontSize-7: 0.875rem // 14px for letter gothic's big size
 
 // font weight
-$fontWeight-primary-regular: 200
-$fontWeight-primary-medium: 400
-$fontWeight-primary-bold: 500
+$fontWeight-primary-regular: 400
+$fontWeight-primary-medium: 600
+$fontWeight-primary-bold: 700
 $fontWeight-accent-regular: 400
 $fontWeight-accent-bold: 700
 
