--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -18,7 +18,7 @@ block content
 
     .large-8.columns
       p.subtext.
-        I’m Ningxia Zhang (张宁夏), a product designer living in San Francisco, originally from China. With a mixed background of Computer Science, Human-Computer Interaction and Entrepreneurship, I bring a holistic perspective to design, and can take a product idea from concept to life. When I'm not designing, I spend my time painting, making conceptual art, strolling in galleries and museums, going to concerts and reading.
+        I’m Ningxia Zhang (张宁夏), a New York-based, China-born product designer. With mixed backgrounds in Computer Science, Software Engineering and Human-Computer Interaction, I bring a holistic perspective to design, and can take a product idea from concept to life. When I'm not designing, I spend my time making art, visiting art galleries and museums, going to live performances and reading.
 
   +cover('../images/portrait.jpg')(class='about-portrait content--fadeIn')
 
@@ -27,21 +27,25 @@ block content
       .large-8.columns
         h2 My Story
         p.
-          I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later, in middle school I gave up all my creative pursuits when I was found to be talented in math and science, and everyone told me that art was for people who weren’t smart enough to do math.
+          I was born and raised in #[a(href='https://en.wikipedia.org/wiki/Yichang', target='_blank') Yichang], a small city in central China. As a child, I loved drawing and creating little art pieces. Later in middle school, I gave up my creative pursuits as I was found talented in math and science, and everyone told me that art was for people not smart enough to do math.
 
         p.
-          So I ended up as a Software Engineering major in #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but felt something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
+          So I ended up as a Software Engineering major at #[a(href='https://en.wikipedia.org/wiki/Fudan_University', target='_blank') Fudan], one of the best universities in China. I enjoyed understanding abstract concepts and solving complex problems, but felt something was missing. I missed the joy of creating, and I realized even though technology is powerful, the art of making it easy to adopt is what eventually makes it beneficial to us. The #[a(href='https://news.stanford.edu/2005/06/14/jobs-061505/', target='_blank') dots] started to connect.
 
         p.
-          This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for a newly-arrived international student, but the overall experience was transformative and empowering.
+          This led me to Stanford for a master degree in Human-Computer Interaction, an area in Computer Science that intersects with design, social science, etc. I took classes ranging from machine learning to designing for theater experiences, and got fully immersed in the creative and entrepreneurial environment. It was quite challenging, especially for an international student, but the overall experience was transformative and empowering.
 
         p.
-          After graduation, I joined an early-stage #[a(href='/design/apropose/', target='_blank') startup] founded by Stanford HCI researchers as the Director of User Experience. I was responsible of user research, interaction design, visual design, as well as corporate and product branding, while being closely involved in product strategy, business development and front-end development. It was a tremendous learning experience.
+          Upon graduation, I joined an early-stage #[a(href='/design/apropose/', target='_blank') startup] founded by Stanford HCI researchers as the Director of User Experience. Apart from doing everything design-related as the only designer, I was also closely involved in product strategy, business develpome and web development.
+
+        p.
+          I then decided to focus more on developing my design skills at a bigger company. So I joined Facebook and worked on their Ads products for more than two years at the Menlo Park HQ. There I had the opportunity to collaborate across teams with various functions. I worked on business-facing surfaces as well as consumer-facing components. It has been a critical period of time for my growth as a designer.
+
 
   .about-section.about-section--bg
     .row.content--fadeIn
       .large-12.columns
-        h2 I'm currently designing @ Facebook :)
+        h2 I'm currently designing @ Uber Eats :)
 
     .row.content--fadeIn.about-contact
       .large-3.columns
@@ -49,7 +53,7 @@ block content
         label Interested in getting in touch? Email is the best way.
 
       .large-3.columns
-        a(href='https://www.instagram.com/ningxiaz/', target='_blank') Instagram
+        a(href='https://www.instagram.com/ningxiazzzzzzzz/', target='_blank') Instagram
         label The best way to see what I've been up to.
 
       .large-3.columns
