--- a/src/index.jade
+++ b/src/index.jade
@@ -17,10 +17,10 @@ block content
     .landing-text
       label.landing-label Full-time
       h1.landing-tagline Product #[a(class='link--prominent landing-link--design', href='/design') Design]er
-      label.landing-label Sometimes
-      h1.landing-tagline #[a(class='link--prominent landing-link--art', href='/art') Art] Explorer
-      label.landing-label Always
-      h1.landing-tagline #[a(class='link--prominent landing-link--music', href='/music') Music] Lover
+      label.landing-label Part-time
+      h1.landing-tagline #[a(class='link--prominent landing-link--art', href='/art') Art]ist
+      //- label.landing-label Always
+      //- h1.landing-tagline #[a(class='link--prominent landing-link--music', href='/music') Music] Lover
 
   a(href='/about')
     .landing-mobile-section.content--fadeIn(style='background-image: url(images/landing_bg.jpg)')
