--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -28,7 +28,7 @@ head
 
   block stylesheets
     link(rel='stylesheet', href= baseUrl + 'styles/main.css')
-    link(rel='stylesheet', type='text/css', href= '//fast.fonts.net/cssapi/67330240-65d1-4421-80e1-1ed4d5553a91.css')
+    link(rel='stylesheet', type='text/css', href= 'https://use.typekit.net/kir7tat.css')
 
   script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
