added brand equity project

--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -23,9 +23,13 @@
     font-weight: $fontWeight-primary-regular
     color: $color-grey-3
 
+  video
+    max-width: 100%
+
   // markdown styling
   ul
     margin-left: $baseline
+    margin-bottom: $baseline
 
   img
     margin: $baseline 0
