--- a/src/about/index.jade
+++ b/src/about/index.jade
@@ -45,7 +45,7 @@ block content
   .about-section.about-section--bg
     .row.content--fadeIn
       .large-12.columns
-        h2 I'm currently designing @ Uber Eats :)
+        h2 I'm currently designing @ Uber Eats. Grab my resume #[a(href='https://www.dropbox.com/s/2mlh0zhqrkpcmaa/Ningxia-Resume.pdf?dl=0', target='_blank') here].
 
     .row.content--fadeIn.about-contact
       .large-3.columns
