--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -17,7 +17,7 @@ head
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
   title Ningxia Zhang
-  meta(name='description', content= 'Product Designer based in SF Bay Area, from China. Former Stanford CS Master in HCI.')
+  meta(name='description', content= 'a New York-based, China-born product designer. Previously at Facebook, Stanford.')
   meta(name='author', content= 'Ningxia Zhang')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
