Brand equity project complete

--- a/src/_layouts/project.sass
+++ b/src/_layouts/project.sass
@@ -25,11 +25,20 @@
 
   video
     max-width: 100%
+    margin: $baseline 0
+
+  .summary
+    padding-top: 2*$baseline
+
 
   // markdown styling
   ul
     margin-left: $baseline
     margin-bottom: $baseline
+
+  ul ul
+        margin-top: 0.5*$baseline
+        margin-bottom: 0.5*$baseline
 
   img
     margin: $baseline 0
